--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Guys01</a>
+            <a href="#" class="logo">Kicking Stumble</a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">PC</a></li>
@@ -25,8 +25,8 @@
             <img src="imagenes/mountains7.png" id="mountains7">
         </section>
         <div class="content">
-            <h2>What is Guys01?</h2>
-            <p>Guys01 is a menu mod for the game Stumble Guys, available right now on Mobile.
+            <h2>What is Kicking Stumble?</h2>
+            <p>Kicking Stumble is a menu mod for the game Stumble Guys, available right now on Mobile.
                 It brings things like matchmaker, 3 round custom maps, Unlocks skins / emotes / dances / etc...
                 Names with color / big names , sizes on name , and make it invisible if you want !
                 <br><br>
