--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <section class="main">
             <img src="imagenes/stars1.png" id="stars">
-            <h2 class="guys01">Guys01</h2>
+            <h2 class="guys01">Kicking Stumble</h2>
             <img src="imagenes/moon2.png" id="moon">
             <img src="imagenes/mountains3.png" id="mountains3">
             <img src="imagenes/mountains4.png" id="mountains4">
