--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=UTF-8>
-        <title>Kicking Stumble</title>
+        <title>Guys01</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
