--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 | Download it Now! |
                 <br><br>
                 
-                ~ Soniic and notnocks</p>
+                ~Developers: Sonic & nocks <br><br>
+                ~Manager & Designer: Oliver</p>
         </div>
 
         <script src="main.js"></script>
